[gd_scene load_steps=4 format=3 uid="uid://2gr5pglniw2h"]

[ext_resource type="Script" path="res://gameplay/levels/start_menu.gd" id="1_g5rg3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3ln8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70afi"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_g5rg3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0.541176, 0, 1)
theme_override_font_sizes/font_size = 120
text = "SILENT HARVEST
"

[node name="MenuOptions" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="Btn_newgame" type="Button" parent="CanvasLayer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_v3ln8")
text = "Nouvelle Partie    "
alignment = 0

[node name="Btn_commandes" type="Button" parent="CanvasLayer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_v3ln8")
text = "Commandes"
alignment = 0

[node name="Btn_quitter" type="Button" parent="CanvasLayer/VBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_70afi")
text = "Quitter"
alignment = 0
